Closed
Bug 29813
Opened 25 years ago
Closed 25 years ago
Collapse "My Sidebar" and its state is not remembered
Categories
(SeaMonkey :: MailNews: Message Display, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
M14
People
(Reporter: nbaca, Assigned: slamm)
References
Details
(Whiteboard: [PDT+] Fixed.)
Build 2000-02-29-08M15: NT4, Linux 6.0, Mac 8.5.1
Overview: After collapsing the "My Sidebar" area, it's not remembered after
closing/quiting and then restarting.
Steps to reproduce:
1. From Browser open Mail
2. In the 3-pane, resize the "My Sidebar" area down as far as it will go.
3. Select File|Close
4. Open Mail
5. In the 3-pane, resize the "My Sidebar" area down as far as it will go again.
6. Select File|Quit
7. Restart Mail
Actual Results: Notice after steps 4 and 7 that the collapsed state is not
remembered.
Expected Results: After a Close or a Quit and restarting Mail, the "My Sidebar"
collapsed state should be remembered. It seems to remember the state if it's
sized larger or smaller but not when it's collapsed.
| Reporter | ||
Updated•25 years ago
|
QA Contact: lchiang → nbaca
| Reporter | ||
Comment 1•25 years ago
|
||
This is important with multiple accounts. I can see that many mail users will
want to maximize the mail folder view.
Whiteboard: beta1
Comment 2•25 years ago
|
||
moving beta1 to keyword field. adding slamm, who said this is probably easy
This is pretty annoying and apparently one of daver's pet peeves :-)
Keywords: beta1
Whiteboard: beta1
Comment 4•25 years ago
|
||
OK, then reassigning to slamm. I'm not sure if this is a sidebar problem or a
splitter problem. The sidebar js for persisting height seems to be ok. What
happens is that even when I bring the Main Sidebar splitter to a collapsed
state, it seems to always think that its height is 82 pixels (at least that's
what keeps getting saved in my localstore.rdf). I've tried adding "collapse" to
the persist tag for title-box in sidebaroverlay.xul but that doesn't work even
though it does save the collapse state correctly. I'm wondering if that's
because we're setting the height to 82. I guess we could also try setting the
box height to 0 in this case though I'm not sure why that isn't the case anyway.
Assignee: putterman → slamm
| Assignee | ||
Comment 5•25 years ago
|
||
This is splitter bug #20546, but I have a work around. I already use the work
around for the main sidebar splitter. Applying the work around to the sub
splitter should be straight forward. I will try to have the work done today and
check it in no later than tomorrow.
Status: NEW → ASSIGNED
Depends on: 20546
| Assignee | ||
Comment 6•25 years ago
|
||
That's weird, evaughan marked 20546 fixed a month ago. Either he didn't fix it,
or something else is causing this bug.
slamm and evaughan are working on a fix now ...
Priority: P3 → P1
Whiteboard: [PDT+] w/b minus on 3/7 → [PDT+] w/b minus on 3/7 (slamm and evaughan are working on it)
Target Milestone: M14
| Assignee | ||
Comment 8•25 years ago
|
||
The fix is to add collased="true" to the splitters sibling that will be
collapsed. A style rule in global.css applies, "visibility: collapse".
Whiteboard: [PDT+] w/b minus on 3/7 (slamm and evaughan are working on it) → [PDT+] w/b minus on 3/7 Fix ready. Waiting for someone to approve it.
| Assignee | ||
Comment 9•25 years ago
|
||
Checked in the fix.
I fixed the grey horizontal splitter in the three pane window. If there is
another splitter that needs this fix, just add persist="collapsed" to the
sibling of the splitter whose collapsed state needs to be remembered.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+] w/b minus on 3/7 Fix ready. Waiting for someone to approve it. → [PDT+] Fixed.
| Reporter | ||
Comment 10•25 years ago
|
||
Build 2000-03-08-08M15: Linux 6.0
Fixed. The collapse state is remembered after Closing and Quitting.
Will check the commercial Win and Mac builds when they pass the smoke test.
| Reporter | ||
Comment 11•25 years ago
|
||
Build 2000-03-08-13M15: NT4, Mac 8.5.1
Verified Fixed.
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•