Add collapsed='true' for splitter siblings when the are collapsed. A style rule in global.css will then hide the sibling. It used to work by setting the style directly. Bug 29813. r=evaughan,mcafee a=jevering